test/decl.ruse
// fail

fn main() int {
    var a int
    var a int = 4 // error
    var b = b // error
    var b = 4
    b.mem // error

    {
        var c int
        a + b + c
        b
        c
    }
    c // error
    var c int

    return d // error
}
